# myexperiments

./: .gitignore  LICENSE  README.md
AngularProjects/my-first-angular/: README.md  angular.json  package-lock.json  package.json
AngularProjects/my-first-angular/e2e/src/: app.e2e-spec.ts
AngularProjects/my-first-angular/src/app/: app.component.html
AngularProjects/my-first-angular/src/app/server/: server.component.html  server.component.ts
AngularProjects/my-first-angular/src/app/servers/: servers.component.html  servers.component.ts
CompilerExplorerChecks/: MapandSwitchCaseComparison.cpp
LearningAngular/NEW CODES/5. Components & Databinding Deep Dive/cmp-databinding-start/: package-lock.json
LearningAngular/NEW CODES/5. Components & Databinding Deep Dive/cmp-databinding-start/src/app/: app.component.html
LearningAngular/NEW CODES/5. Components & Databinding Deep Dive/cmp-databinding-start/src/app/cockpit/: cockpit.component.ts
Openframework/v0.10.1/of_v0.10.1_vs2017_release/apps/myApps/mysamplecpp17/: mysamplecpp17.sln  mysamplecpp17.vcxproj
Openframework/v0.10.1/of_v0.10.1_vs2017_release/libs/openFrameworksCompiled/project/vs/: openframeworksLib.vcxproj
Openframework/v0.10.1/of_v0.10.1_vs2017_release/projectGenerator-vs/resources/app/: settings.json
TeachingJava/: pom.xml
TeachingJava/src/main/java/: LinearSearch.java
awkfiddling/: cluster.yml  nodecounter  try.sh  txt
awkfun/: nodes.yaml  try.awk
bashfun/: awk  dockerinstall.sh  regextest.sh
boostmsm/: CMakeLists.txt
boostmsm_basicfe/: main.cpp
boostmsm_eumlfe/: CMakeLists.txt  main.cpp
box2dfun/: .clang-tidy  CMakeLists.txt
box2dfun/src/: CMakeLists.txt  main.cpp
cppfun/: CMakeLists.txt  CommandGenerator.cpp  CommandGenerator.h  StaticMapGenerator.h  enumstringyfy.h  main.cpp
dictionary_python/: dictops.py
gocache/: go.sum  main.go
gocache/cmd/bulkinsert/: bulkinsert.go
gocache/internal/pkg/metrics/: consumer.go  dbindexing.go  processrollup.go
gocache/internal/pkg/plugins/: aggregators.go  aggregators_test.go  pluginHandler.go
gohelloworld/: go_build_main_go  main.go
gstreamer/: CMakeLists.txt
gstreamer/src/: main.cpp
imagetool/: loader.js  loader.ts  main.js  main.ts  package-lock.json  package.json  tsconfig.json
learning_go/: README.md  go.sum
learning_go/cmd/: main.go
protobuf-kafka/: consumer.py
protobuf-kafka-go/: .gitignore  README.md  go.sum  protoc.sh
protobuf-kafka-go/cmd/: main.go
protobuf-kafka-python/: plugin-producer.py  producer.py
protobuf-kafka-python/protobuf/: deserialize.py
protobuf-kafka-python/schema/: callexecuter_metrics.proto  http_plugin.proto  netrounds_agent_untrusted_metrics.proto
protobuf-kafka/kafka/: __init__.py
protobuf-kafka/protobuf/: serialize.py
pytorchfun/: CMakeLists.txt  main.cpp
raylib_learning/: CMakeLists.txt
raylib_learning/examples/: raylib_example.c
schemefun/: helloworld.scm
sfmlfun/: CMakeLists.txt
sfmlfun/src/: CMakeLists.txt  main.cpp
shareptr/: CMakeLists.txt  main.cpp
webassembly/: main.cpp
webrtc_nodejs/: package-lock.json  package.json  webrtcserver.js
